// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadCards /> renders with beta 1`] = `
<DocumentFragment>
  <div
    class="download-cards__Container-k88p0k-0 bLXmwT"
  >
    <div
      class="download-cards__Header-k88p0k-1 iGWqQb"
    >
      Download for Linux (x64)
    </div>
    <a
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <button
        class="download-cards__Button-k88p0k-2 jBgiZI"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="download-cards__Description-k88p0k-3 fGTQht"
        >
          Stable, for most users
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders with invalid target 1`] = `
<DocumentFragment>
  <div
    class="download-cards__Container-k88p0k-0 bLXmwT"
  >
    <div
      class="download-cards__Header-k88p0k-1 iGWqQb"
    >
      Download for chiba
    </div>
    <a
      data-testid="download-stable-version"
      href="https://github.com/poooi/poi/releases"
    >
      <button
        class="download-cards__Button-k88p0k-2 jBgiZI"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="download-cards__Description-k88p0k-3 fGTQht"
        >
          Stable, for most users
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders without beta 1`] = `
<DocumentFragment>
  <div
    class="download-cards__Container-k88p0k-0 bLXmwT"
  >
    <div
      class="download-cards__Header-k88p0k-1 iGWqQb"
    >
      Download for Linux (x64)
    </div>
    <a
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <button
        class="download-cards__Button-k88p0k-2 jBgiZI"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="download-cards__Description-k88p0k-3 fGTQht"
        >
          Stable, for most users
        </div>
      </button>
    </a>
    <a
      href="https://npm.taobao.org/mirrors/poi/v10.3.0/poi-10.3.0.7z"
    >
      <button
        class="download-cards__Button-k88p0k-2 iwDgCG"
      >
        <div>
          v10.3.0
        </div>
        <div
          class="download-cards__Description-k88p0k-3 fGTQht"
        >
          Beta, for new features
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;
